<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.66">
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/espaciosNaturales"
                android:id="@+id/pt1Espacios"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.66"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/turismo"
                android:id="@+id/pt1Turismo"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.66"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/evento"
                android:id="@+id/pt1Eventos"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.66">
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
</LinearLayout>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:layout_margin="20dp"
    android:gravity="center"
    android:textSize="31dp"
    android:id="@+id/carga"
    android:text="Cargando..."/>
</RelativeLayout>